--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -70,10 +70,12 @@ body {
     border-radius: 100%;
 }
 .Search {
-    min-height: calc(100vh - 10rem - 10rem);
+    min-height: 20rem;
+    background-color: aqua;
 }
 
 .Footer {
     background-color: orange;
+    width: 100%;
     height: 15rem;
 }
