--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -69,6 +69,28 @@ body {
     height: 2rem;
     border-radius: 100%;
 }
+.Header-menu-scroll{
+    position: fixed;
+    width: 100%;
+    height: 4rem;
+    background-color: red;
+
+    animation: menuScroll .5s linear forwards;
+
+}
+
+@keyframes menuScroll {
+    from {
+        top: -2rem;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
 .Search {
     min-height: 20rem;
     background-color: aqua;
@@ -77,5 +99,5 @@ body {
 .Footer {
     background-color: orange;
     width: 100%;
-    height: 15rem;
+    height: 95rem;
 }
