--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,3 +1,12 @@
+:root{
+    --principal:#1a759f;
+    --body:#f8f9fa;
+    --white:#ffff;
+    --menu:#184e77;
+    --vinculos_act:#dfe7fd;
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -10,6 +19,7 @@ html {
 
 body {
     font-size: 1.6rem;
+    background-color: var(--body);
 }
 
 .Header {
@@ -18,26 +28,30 @@ body {
     grid-template-rows: 1fr;
     gap: 1rem;
     justify-items: center;
+    align-items: center;
     height: 10rem;
-    background-color: orange;
+    background-color: var(--principal);
+    box-shadow: 0 .2rem .6rem .2rem rgba(0,0,0,0.4);
+
 }
 
 .Header-title {
-    margin-top: 3.5rem;
     font-size: 2.5rem;
     letter-spacing: .1rem;
+    color: var(--white);
 }
 
 .Header-menu {
     position: absolute;
+    top: 0;
     right: -12rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     width: 12rem;
-    height: 16rem;
-    background-color: aqua;
+    height: 20rem;
+    background-color: var(--menu);
 
     animation-name: menu;
     animation-duration: .4s;
@@ -55,25 +69,33 @@ body {
 
     to {
         right: 0;
-        opacity: 0.7;
+        opacity: 0.8;
 
 
     }
 }
 
-.Header-menu-closeButton{
+.Header-menu-img {
+    width: 3rem;
+    height: 3rem;
+    object-fit: contain;
+}
+
+.Header-menu-closeButton-img{
     position: absolute;
-    top: .8rem;
-    right: .8rem;
-    width: 2rem;
-    height: 2rem;
+    top: 1rem;
+    right: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 100%;
+    object-fit: contain;
 }
 .Header-menu-scroll{
     position: fixed;
     width: 100%;
     height: 4rem;
     background-color: red;
+    box-shadow: 0 .2rem .6rem .2rem rgba(0,0,0,0.4);
 
     animation: menuScroll .5s linear forwards;
 
@@ -89,6 +111,20 @@ body {
         top: 0;
         opacity: 1;
     }
+}
+
+.menu-link {
+    color: var(--white);
+    text-decoration: none;
+    letter-spacing: .1rem;
+    font-size: 1.8rem
+}
+
+.Header-menu-scroll {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: var(--principal);
 }
 
 .Search {
