--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -92,9 +92,12 @@ body {
 }
 .Header-menu-scroll{
     position: fixed;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
     height: 4rem;
-    background-color: red;
+    background-color: var(--principal);
     box-shadow: 0 .2rem .6rem .2rem rgba(0,0,0,0.4);
 
     animation: menuScroll .5s linear forwards;
@@ -117,14 +120,8 @@ body {
     color: var(--white);
     text-decoration: none;
     letter-spacing: .1rem;
-    font-size: 1.8rem
-}
-
-.Header-menu-scroll {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: var(--principal);
+    font-size: 1.8rem;
+    font-weight: bold;
 }
 
 .Search {
