--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -3,7 +3,7 @@
     --body:#f8f9fa;
     --white:#ffff;
     --menu:#184e77;
-    --vinculos_act:#dfe7fd;
+    --black:#212529;
 }
 
 
@@ -19,7 +19,6 @@ html {
 
 body {
     font-size: 1.6rem;
-    background-color: var(--body);
 }
 
 .Header {
@@ -69,7 +68,7 @@ body {
 
     to {
         right: 0;
-        opacity: 0.8;
+        opacity: 1;
 
 
     }
@@ -125,9 +124,61 @@ body {
 }
 
 .Search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     min-height: 20rem;
-    background-color: aqua;
+    margin-top: 2rem;
+    background-color: var(--body);
 }
+
+.Search-title {
+    margin-bottom: 1rem;
+    font-style: italic;
+    color: var(--black);
+}
+
+.Search-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.Search-input {
+    width: 22rem;
+    height: 4rem;
+    margin-bottom: 2rem;
+    padding: 1.2rem;
+    border-radius: 8rem;
+    border: .1rem solid var(--black);
+    outline: none;
+}
+
+.Search-input:focus {
+    outline: .3rem solid var(--menu);
+}
+
+::placeholder {
+    color: var(--black);
+    opacity: 0.7;
+    letter-spacing: .1rem;
+}
+
+.Search-submit {
+    width: 9rem;
+    height: 2.5rem;
+    margin: 0 auto;
+    border-radius: .8rem;
+    background-color: var(--principal);
+    color: var(--white);
+    border: .1rem solid var(--black);
+    transition: .1s;
+}
+
+.Search-submit:active {
+    width: 5rem;
+}
+
+
 
 .Footer {
     background-color: orange;
