--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -178,10 +178,32 @@ body {
     width: 5rem;
 }
 
+.Home {
+    min-height: calc(100vh - 10rem - 10rem);
+}
 
+.Home-img {
+    min-height: 22rem;
+    object-fit: contain;
+}
+
+.Home-information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 13rem;
+}
+
+.Home-information-p {
+    margin: 0 .5rem;
+    font-weight: 500;
+    line-height: 2.1rem;
+    text-align: center;
+}
 
 .Footer {
     background-color: orange;
     width: 100%;
-    height: 95rem;
+    height: 10rem;
 }
