--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -203,7 +203,32 @@ body {
 }
 
 .Footer {
-    background-color: orange;
+    display: grid;
+    grid-template-rows: 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: center;
     width: 100%;
     height: 10rem;
+    background-color: var(--principal);
+    box-shadow: 0 -.2rem .6rem .2rem rgba(0,0,0,0.4);
+
+}
+
+.Footer-vinculo {
+    width: 8rem;
+    height: 2rem;
+    text-decoration: none;
+    color: var(--white);
+    background-color: var(--menu);
+    text-align: center;
+    border-radius: .8rem;
+}
+
+
+.Footer-right{
+    grid-row: 2;
+    grid-column: 1/4;
+    font-style: italic;
+    color: var(--white);
 }
