--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -19,6 +19,7 @@ html {
 
 body {
     font-size: 1.6rem;
+    font-family: 'Dosis', sans-serif;
 }
 
 .Header {
@@ -179,12 +180,16 @@ body {
 }
 
 .Home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     min-height: calc(100vh - 10rem - 10rem);
 }
 
 .Home-img {
-    min-height: 20rem;
     object-fit: contain;
+    width: 25rem;
+    height: 20rem;
 }
 
 .Home-information {
@@ -239,6 +244,11 @@ body {
     background-color: var(--menu);
     text-align: center;
     border-radius: .8rem;
+}
+
+.View{ 
+    min-height: 15rem;
+    background-color: var(--body);
 }
 
 
