--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -245,16 +245,38 @@ body {
     text-align: center;
     border-radius: .8rem;
 }
+.Footer-right{
+    grid-row: 2;
+    grid-column: 1/4;
+    font-style: italic;
+    color: var(--white);
+    }
 
 .View{ 
     min-height: 15rem;
     background-color: var(--body);
 }
 
+.View-card {
+    width: 30rem;
+    height: 26rem;
+    margin: 0 auto 5rem;
+    outline: .2rem solid var(--menu);
+}
 
-.Footer-right{
-    grid-row: 2;
-    grid-column: 1/4;
-    font-style: italic;
-    color: var(--white);
+.View-card-img{
+    width: 30rem;
+    height: 20rem;
+    object-fit: cover;
+    border-bottom: .3rem solid var(--menu);
+}
+
+.View-card-description {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    height: 6rem;
+    margin-top: -0.5rem;
 }
