--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -76,8 +76,8 @@ body {
 }
 
 .Header-menu-img {
-    width: 3rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 3.5rem;
     object-fit: contain;
 }
 
@@ -259,7 +259,7 @@ body {
 
 .View-card {
     width: 30rem;
-    height: 26rem;
+    min-height: 28rem;
     margin: 0 auto 5rem;
     outline: .2rem solid var(--menu);
 }
@@ -273,10 +273,29 @@ body {
 
 .View-card-description {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows:repeat(2,1fr);
     justify-items: center;
     align-items: center;
-    height: 6rem;
+    min-height: 10rem;
     margin-top: -0.5rem;
+}
+
+.View-card-name {
+    grid-column: 1/4;
+    margin: 0 .7rem;
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: var(--black);
+}
+
+.View-card-released {
+    font-style: italic;
+    font-weight: 300;
+    color: var(--black);
+}
+
+.View-card-more {
+    grid-column: 3;
+    grid-row: 2;
 }
