--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -534,4 +534,9 @@ body {
         object-fit: cover;
     }
     
+    .Acerca-container {
+        width: 60rem;
+        min-height: 10rem;
+        margin: 3rem auto;
+    }
 }
